# deepml

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
solutions/: s0001_matrix_times_vector.py  s0004_calculate_mean_by_row_or_column.py  s0005_scalar_multiplication_of_a_matrix.py  s0006_calculate_eigenvalues_of_a_matrix.py  s0007_matrix_transformation.py  s0008_calculate_2x2_matrix_inverse.py  s0009_matrix_times_matrix.py  s0010_calculate_covariance_matrix.py  s0011_solve_linear_equations_using_jacobi_method.py  s0012_singular_value_decomposition.py  s0013_determinant_of_a_4x4_matrix_using_laplace_expansion.py  s0014_linear_regression_using_normal_equation.py  s0015_linear_regression_using_gradient_descent.py  s0016_feature_scaling_implementation.py  s0017_kmeans_clustering.py  s0018_implement_k_fold_cross_validation.py  s0019_principal_component_analysis_implementation.py  s0020_decision_tree_learing.py  s0021_pegasos_kernel_svm_implementation.py  s0022_sigmoid_activation_function_understanding.py  s0023_softmax_activation_function_implementation.py  s0024_single_neuron.py  s0025_single_neuron_with_backpropagation.py  s0027_transformation_matrix_from_basis_b_to_c.py  s0028_svd_a_2x2_matrix_using_eigen_values_and_vectors.py  s0029_random_shuffle_of_dataset.py  s0030_batch_iterator_for_dataset.py  s0031_divide_dataset_based_on_feature_threshold.py  s0032_generate_polynomial_features.py  s0033_generate_random_subsets_of_a_dataset.py  s0034_one_hot_encoding_of_normal_values.py  s0035_convert_vector_to_diagonal_matrix.py  s0037_calculate_correlation_matrix.py  (+89 more)
(+158 files in other folders)
