[project]
name = "deepml"
version = "0.1.0"
description = "Solving problems from DeepML"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Kuat Kurpenov", email = "kurpenov2003@yandex.ru" }]
keywords = ["algorithms", "deepml", "math", "numpy", "python", "pytorch"]
dependencies = [
    "pytest>=9.0.2",
]
